--- a/bayesian_classifier.ipynb
+++ b/bayesian_classifier.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "187c4807",
+   "id": "50e54311",
    "metadata": {},
    "source": [
-    "import the library"
+    "<span style=\"color:blue;\">importing the necessary  library</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad4541a6",
+   "execution_count": 72,
+   "id": "a3bd25ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c892ba7f",
+   "id": "a953e4cc",
    "metadata": {},
    "source": [
-    "reading the file"
+    "\n",
+    "<span style=\"color:blue;\">reading the data</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "963c6ded",
+   "execution_count": 73,
+   "id": "e1d1c976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +43,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f1ecc8f",
+   "id": "c9292182",
    "metadata": {},
    "source": [
-    "printing the columns from the dataset"
+    "printing the columns from the dataset\n",
+    "\n",
+    "<span style=\"color:blue;\">reading the data</span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0eeaecad",
+   "id": "65a9dc2f",
    "metadata": {},
    "outputs": [
     {
@@ -70,58 +73,197 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04873217",
+   "id": "d5b99b24",
    "metadata": {},
    "source": [
-    "to check the data type,null values"
+    "<span style=\"color:blue;\">to check the data type,null values\n",
+    "printing the columns from the dataset</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "b3171388",
+   "execution_count": 74,
+   "id": "ee179257",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 768 entries, 0 to 767\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column                    Non-Null Count  Dtype  \n",
-      "---  ------                    --------------  -----  \n",
-      " 0   Pregnancies               768 non-null    int64  \n",
-      " 1   Glucose                   768 non-null    int64  \n",
-      " 2   BloodPressure             768 non-null    int64  \n",
-      " 3   SkinThickness             768 non-null    int64  \n",
-      " 4   Insulin                   768 non-null    int64  \n",
-      " 5   BMI                       768 non-null    float64\n",
-      " 6   DiabetesPedigreeFunction  768 non-null    float64\n",
-      " 7   Age                       768 non-null    int64  \n",
-      " 8   Outcome                   768 non-null    int64  \n",
-      "dtypes: float64(2), int64(7)\n",
-      "memory usage: 54.1 KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.845052</td>\n",
+       "      <td>120.894531</td>\n",
+       "      <td>69.105469</td>\n",
+       "      <td>20.536458</td>\n",
+       "      <td>79.799479</td>\n",
+       "      <td>31.992578</td>\n",
+       "      <td>0.471876</td>\n",
+       "      <td>33.240885</td>\n",
+       "      <td>0.348958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.369578</td>\n",
+       "      <td>31.972618</td>\n",
+       "      <td>19.355807</td>\n",
+       "      <td>15.952218</td>\n",
+       "      <td>115.244002</td>\n",
+       "      <td>7.884160</td>\n",
+       "      <td>0.331329</td>\n",
+       "      <td>11.760232</td>\n",
+       "      <td>0.476951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.078000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>27.300000</td>\n",
+       "      <td>0.243750</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>30.500000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>0.372500</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>140.250000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>127.250000</td>\n",
+       "      <td>36.600000</td>\n",
+       "      <td>0.626250</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>199.000000</td>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>846.000000</td>\n",
+       "      <td>67.100000</td>\n",
+       "      <td>2.420000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+       "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
+       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
+       "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
+       "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
+       "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
+       "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
+       "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
+       "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
+       "\n",
+       "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
+       "count  768.000000                768.000000  768.000000  768.000000  \n",
+       "mean    31.992578                  0.471876   33.240885    0.348958  \n",
+       "std      7.884160                  0.331329   11.760232    0.476951  \n",
+       "min      0.000000                  0.078000   21.000000    0.000000  \n",
+       "25%     27.300000                  0.243750   24.000000    0.000000  \n",
+       "50%     32.000000                  0.372500   29.000000    0.000000  \n",
+       "75%     36.600000                  0.626250   41.000000    1.000000  \n",
+       "max     67.100000                  2.420000   81.000000    1.000000  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.info()"
+    "data.describe()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3712a1c3",
+   "id": "d4ffbd20",
    "metadata": {},
    "source": [
-    "changing the data type of dependent variable <br>\n",
-    "dependent variable is Outcome"
+    "\n",
+    "<span style=\"color:blue;\">changing the data type of dependent variable <br>\n",
+    "dependent variable is Outcome</span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "eab0fb98",
+   "id": "a7555665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +272,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0ac7d77",
+   "id": "20171420",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "400cac07",
+   "id": "cb46c703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5bde65c6",
+   "id": "64527a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,8 +299,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d35087",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
-   "id": "27271fbc",
+   "id": "60fa79de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f74645be",
+   "id": "2b4ee607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9ddae5a1",
+   "id": "cde3a788",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0fdc4353",
+   "id": "b4fab0eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,50 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "325bbdb7",
+   "execution_count": 76,
+   "id": "f039e664",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "b5539856",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import accuracy_score\n",
     "acc=accuracy_score(y_test,pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "a359ef31",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "768"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 71,
-   "id": "bb8da755",
-   "metadata": {},
+   "id": "8452578c",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
