--- a/bayesian_classifier.ipynb
+++ b/bayesian_classifier.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "50e54311",
+   "id": "087afd46",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue;\">importing the necessary  library</span>"
+    " <h5><span style=\"color:purple;\">Importing the necessary  library  <br> numpy- handling arrays<br>pandas-dealing with dataframes<br>train_test_split from the scikit learn for dividing the dataset into training set and testing set</span></h5>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "id": "a3bd25ac",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns\n",
     "from sklearn.naive_bayes import GaussianNB"
    ]
   },
@@ -27,13 +26,12 @@
    "id": "a953e4cc",
    "metadata": {},
    "source": [
-    "\n",
-    "<span style=\"color:blue;\">reading the data</span>"
+    "<h5><span style=\"color:purple;\">READING THE DATA</span></h5>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "e1d1c976",
    "metadata": {},
    "outputs": [],
@@ -46,14 +44,12 @@
    "id": "c9292182",
    "metadata": {},
    "source": [
-    "printing the columns from the dataset\n",
-    "\n",
-    "<span style=\"color:blue;\">reading the data</span>"
+    "<h5><span style=\"color:purple;\">printing the columns from the dataset</span></h5>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "65a9dc2f",
    "metadata": {},
    "outputs": [
@@ -76,13 +72,13 @@
    "id": "d5b99b24",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue;\">to check the data type,null values\n",
-    "printing the columns from the dataset</span>"
+    "<h5><span style=\"color:purple;\">to check the data type,null values\n",
+    "printing the columns from the dataset</span></h5>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "ee179257",
    "metadata": {},
    "outputs": [
@@ -241,7 +237,7 @@
        "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,14 +251,14 @@
    "id": "d4ffbd20",
    "metadata": {},
    "source": [
-    "\n",
-    "<span style=\"color:blue;\">changing the data type of dependent variable <br>\n",
-    "dependent variable is Outcome</span>"
+    "<h5>\n",
+    "<span style=\"color:purple;\">changing the data type of dependent variable. <br>\n",
+    "Here,dependent variable is Outcome.</span></h5>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "a7555665",
    "metadata": {},
    "outputs": [],
@@ -274,11 +270,13 @@
    "cell_type": "markdown",
    "id": "20171420",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h3><span style=\"color:purple;\">Grouping the data with respect to the independent and dependent variable </span></h3><br> <span style=\"color:purple;\"><b>Independent variable</b>-<span style=\"color:black;\">Pregnancies, Glucose, BloodPressure, SkinThickness, Insulin,BMI, DiabetesPedigreeFunction, Age<br><span style=\"color:purple;\"><b>Dependent Variable </b>-<span style=\"color:black;\"> Outcome</span>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "cb46c703",
    "metadata": {},
    "outputs": [],
@@ -288,8 +286,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b95cec94",
+   "metadata": {},
+   "source": [
+    "<h5><span style=\"color:purple;\">Splitting the dataset into 4 i.e. <br> X_train <br> X_test <br> y_train <br> y_test </span></h5>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "64527a73",
    "metadata": {},
    "outputs": [],
@@ -298,16 +304,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4d35087",
+   "cell_type": "markdown",
+   "id": "a0b6424c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h2><span style=\"color:purple;\">Scaling the features</span></h2>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "60fa79de",
    "metadata": {},
    "outputs": [],
@@ -319,9 +325,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75c103e8",
+   "metadata": {},
+   "source": [
+    "<h6><span style=\"color:purple;\">Creating a instance for the Gaussian Naive bayes classifier</span></h6>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "2b4ee607",
+   "execution_count": 9,
+   "id": "770e5341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,18 +343,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74959e96",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:purple;\">Fitting the model in the dataset</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "cde3a788",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GaussianNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GaussianNB</label><div class=\"sk-toggleable__content\"><pre>GaussianNB()</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
        "GaussianNB()"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,8 +375,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "965f68a7",
+   "metadata": {},
+   "source": [
+    "<h6><span style=\"color:purple;\">Predicting the Outcome variable for the testing dataset</span></h6>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "b4fab0eb",
    "metadata": {},
    "outputs": [],
@@ -360,8 +393,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "023493f6",
+   "metadata": {},
+   "source": [
+    "<h5><span style=\"color:purple;\">Using metrics to check the quality of the model</span></h5>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "f039e664",
    "metadata": {},
    "outputs": [],
@@ -371,8 +412,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1295f8fe",
+   "metadata": {},
+   "source": [
+    "<h6><span style=\"color:purple;\">Printing the result</span></h6>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "8452578c",
    "metadata": {
     "scrolled": true
@@ -409,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
